--- a/src/components/ScoreGrid/ScoreGrid.css
+++ b/src/components/ScoreGrid/ScoreGrid.css
@@ -18,20 +18,21 @@
 .mobile .table td {
 	padding: 0px 1px;
 	vertical-align: middle;
-	padding-top: 2px;
 }
 .mobile .table th {
 	padding: 5px 0px;
 }
 
 .score-box {
+	
+	text-shadow: none;
 	display: inline-block;
 	border: 1px solid grey;
-	background-color: white;
+	background-color: rgb(98,37,40, 0.3);
 	height: 30px;
 	width: 30px;
 	border-radius: 5px;
-	padding-top: 1px;
+	padding-top: 3px;
 	text-align: center;
 }
 
@@ -46,32 +47,42 @@
 .mobile .move-row td {
 	padding: 0px 1px;
 	text-align: center;
+	background-color: rgb(98,37,40, 0.4)
 }
 
 
 
-.score-box.high {
+/*.score-box.high {
 background-color: red;
-}
+}*/
+
+
+
 
 .table-bordered {
+
 	table-layout: fixed;
-	margin-top: 5%;
+	
+	background-color: rgb(98,37,40, 0.4);
+	text-shadow: 1px 1px rgba(0,0,0,0.8);
 }
 
 .player-header.current {
-	color: rgb(238, 62, 128);
+	text-decoration: underline;
 }
 
 .table .scrabble-letter {
 	height: 32px;
 	width: 32px;
 	cursor: default;
+	color: black;
+	text-shadow: none;
+	vertical-align: middle;
 }
 
 .table .letter {
-	font-size: 20px;
-	top: 3px;
+	font-size: 21px;
+	top: 2px;
 	left: -2px;
 	font-weight: normal;
 	cursor: default;
@@ -83,6 +94,7 @@ background-color: red;
 }
 
 .table .score {
+	right: 1px;
 	font-size: 10px;
 	top: 18px;
 	font-weight: normal;
@@ -95,7 +107,7 @@ background-color: red;
 }
 
 .score-grid-cell td {
-	border: none;
+	border: none !important;
 	margin: 0;
 	padding: 0;
 }
@@ -105,8 +117,59 @@ background-color: red;
 	margin: 0;
 	padding: 0;
 	width: 100%;
+	text-align: center;
 }
 
 th.move {
   padding: 0px !important;
 }
+
+.mobile .row {
+	min-height: 43px;
+}
+.mobile .call-player-to-action {
+	margin-top: 10px;
+}
+
+.total-score td {
+	text-align: center;
+}
+
+
+/*
+
+
+table { 
+    border: 1px solid black;
+    border-collapse: separate;
+    border-left: 0;
+    border-radius: 4px;
+    border-spacing: 0px;
+}
+thead {
+    display: table-header-group;
+    vertical-align: middle;
+    
+    
+}
+tr {
+    display: table-row;
+    vertical-align: inherit;
+    border-color: inherit;
+}
+th, td {
+    padding: 5px 4px 6px 4px; 
+    text-align: left;
+    vertical-align: top;
+    border-left: 1px solid black;    
+}
+td {
+    border-top: 1px solid black;    
+}
+thead:first-child tr:first-child th:first-child, tbody:first-child tr:first-child td:first-child {
+    border-radius: 4px 0 0 0;
+}
+thead:last-child tr:last-child th:first-child, tbody:last-child tr:last-child td:first-child {
+    border-radius: 0 0 0 4px;
+}
+*/
