--- a/src/components/ScrabbleTile/ScrabbleTile.css
+++ b/src/components/ScrabbleTile/ScrabbleTile.css
@@ -23,7 +23,7 @@
 }
 
 .scrabble-letter:hover {
-	box-shadow: 0 0 15px red;
+	box-shadow: 0 0 15px #622528;
 	z-index: 10;
 }
 
@@ -51,26 +51,32 @@
 }
 
 .letter {
-	width: 100%;
-	top: 6px;
-	display: block;
-	text-align: center;
-	line-height: normal;
-	font-size: 36px;
-	position: absolute;
+right: 3px;
+width: 100%;
+top: 5px;
+display: block;
+text-align: center;
+line-height: normal;
+font-size: 38px;
+position: absolute;
 }
 
 .mobile .letter {
 	top: 0px;
 	font-size: 32px;
+	right: 1px;
+	font-family: Helvetica, Arial, Sans-Serif;
 
 }
 
 .score {
+	font-size: 15px;
 	position: absolute;
 	text-align: right;
 	bottom: 0;
 	right: 3px;
+	font-family: Helvetica, Arial, Sans-Serif;
+	letter-spacing: 0px;
 }
 
 .mobile .score {
