--- a/src/components/ScrabbleTile/ScrabbleTile.css
+++ b/src/components/ScrabbleTile/ScrabbleTile.css
@@ -10,6 +10,7 @@
   z-index: 1;
   cursor: pointer;
   font-family: Verdana,Geneva,sans-serif !important;
+  text-shadow: none;
 }
 
 .mobile .scrabble-letter {
