Esling part one

--- a/src/components/ScoreGrid/ScoreGrid.css
+++ b/src/components/ScoreGrid/ScoreGrid.css
@@ -26,6 +26,9 @@
 .desktop thead th {
   border-bottom-style: inherit;
 }
+.desktop .table th {
+  padding: 0px;
+}
 
 .score-box {
 	text-shadow: none;
