--- a/src/components/ScoreGrid/ScoreGrid.css
+++ b/src/components/ScoreGrid/ScoreGrid.css
@@ -1,3 +1,16 @@
+/*General table css*/
+
+.table-bordered {                     
+  table-layout: fixed;
+  background-color: rgb(98,37,40, 0.4);
+  text-shadow: 1px 1px rgba(0,0,0,0.8);
+}
+
+.table thead th {
+  vertical-align: middle;
+  border-bottom-style: inherit;
+}
+
 .move-header {
 	width: 65px;
 }
@@ -6,188 +19,90 @@
 	height: 57px;
 	vertical-align: middle;
   text-align: center;
-}
-
-.table thead th {
-	vertical-align: middle;
+  padding: 0px;
 }
 
 .table td {
 	vertical-align: middle;
 }
-.mobile .table td {
-	padding: 0px 1px;
-	vertical-align: middle;
-}
-.mobile .table th {
-	padding: 5px 0px;
-  border-bottom-style: inherit;
-}
-.desktop thead th {
-  border-bottom-style: inherit;
-}
-.desktop .table th {
-  padding: 0px;
+
+.score-grid-cell td {
+  border: none;
+  margin: 0;
+  padding: 0;
 }
 
-.score-box {
-	text-shadow: none;
-	display: inline-block;
-	border: 1px solid grey;
-	background-color: rgb(98,37,40, 0.3);
-	height: 30px;
-	width: 30px;
-	border-radius: 5px;
-	padding-top: 3px;
-	text-align: center;
-}
-
-.score-grid-cell .word-cell {
-	text-align: left;
-}
-
-.score-cell {
-	text-align: right !important;
-}
-
-.mobile .turn-row td {
-	padding: 0px 1px;
-	text-align: center;
-	background-color: rgb(98,37,40, 0.4)
-}
-.mobile tr .word-row:first-child .word-cell{
-  padding-top: 6px;
-}
-
-.mobile tr .word-row:last-child .word-cell{
-  padding-bottom: 6px;
-}
-
-.table-row.bingo-row {
-  text-align: center;
-  padding: 9px;
-}
-
-.bingo-cell {
+.score-grid-cell {
   width: 100%;
-  height: 100%
-}
-
-.bingo {
   text-align: center;
-  vertical-align: middle;
-}
-
-.table-bordered {
-	table-layout: fixed;
-	background-color: rgb(98,37,40, 0.4);
-	text-shadow: 1px 1px rgba(0,0,0,0.8);
 }
 
 .player-turn.active {
   border: 4px solid white;
 }
 
-.table .scrabble-letter {
-	height: 32px;
-	width: 32px;
-	cursor: default;
-	color: black;
-	text-shadow: none;
-	vertical-align: middle;
+.score-grid-cell .word-cell {
+  text-align: left;
 }
 
-.table .letter {
-	font-size: 21px;
-	top: 2px;
-	left: -2px;
-	font-weight: normal;
-	cursor: default;
+.score-cell {
+  text-align: right;
 }
 
-.table .scrabble-letter:hover {
-	box-shadow: 0 0 0px ;
-	z-index: 0;
-}
-
-.table .score {
-	right: 1px;
-	font-size: 10px;
-	top: 18px;
-	font-weight: normal;
-}
-.mobile .playerNames {
-	width: 61px;
-	height: 40px;
-	text-align: center;
-	padding: 0px;
-}
-
-.score-grid-cell td {
-	border: none !important;
-	margin: 0;
-	padding: 0;
-}
-
-.score-grid-cell {
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	text-align: center;
-}
-
-th.move-number {
-  padding: 0px !important;
-}
-
-.mobile .table-row {
-	min-height: 43px;
-}
-.mobile .call-player-to-action {
-	margin-top: 10px;
-}
-
-.total-score td {
-	text-align: center;
-}
-.mobile .move-row {
+.score-box {
+  display: inline-block;
+  border: 1px solid white;
+  background-color: rgb(98,37,40, 0.3);
+  height: 30px;
+  width: 30px;
+  border-radius: 5px;
+  padding-top: 2px;
   text-align: center;
 }
 
-/*
+.bingo-cell {
+  width: 100%;
+}
 
+.bingo {
+  vertical-align: middle;
+}
 
-table { 
-    border: 1px solid black;
-    border-collapse: separate;
-    border-left: 0;
-    border-radius: 4px;
-    border-spacing: 0px;
+.total-score td {
+  text-align: center;
 }
-thead {
-    display: table-header-group;
-    vertical-align: middle;
-    
-    
+
+/*MOBILE table css*/
+
+.mobile table {
+  font-size: 14px;
 }
-tr {
-    display: table-row;
-    vertical-align: inherit;
-    border-color: inherit;
+
+.mobile .playerNames {
+  width: 61px;
+  height: 40px;
+  text-align: center;
+  padding: 0px;
 }
-th, td {
-    padding: 5px 4px 6px 4px; 
-    text-align: left;
-    vertical-align: top;
-    border-left: 1px solid black;    
+
+.mobile .table td {
+  padding: 0px 1px;
 }
-td {
-    border-top: 1px solid black;    
+
+.mobile .move-row {
+  font-weight: bold;
+  background-color: rgb(98,37,40, 0.3);
+  text-align: center;
 }
-thead:first-child tr:first-child th:first-child, tbody:first-child tr:first-child td:first-child {
-    border-radius: 4px 0 0 0;
+
+.mobile .player-name {
+  text-align: center;
 }
-thead:last-child tr:last-child th:first-child, tbody:last-child tr:last-child td:first-child {
-    border-radius: 0 0 0 4px;
+
+.mobile tr .word-row:first-child .word-cell{    /*Correct padding for every row*/
+  padding-top: 6px;
 }
-*/
+
+.mobile tr .word-row:last-child .word-cell{
+  padding-bottom: 6px;
+}
