--- a/src/components/ScrabbleTile/ScrabbleTile.css
+++ b/src/components/ScrabbleTile/ScrabbleTile.css
@@ -116,6 +116,6 @@ position: absolute;
 
 /*MOBILE TABLE tile css*/
 
-.mobile .table .scrabble-letter {
+.mobile .scrabble-letter {
 	left: 0px;
 }
