--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,12 @@ body {
   text-shadow: 1px 1px rgba(0,0,0,0.5)
 }
 
+@media screen and (max-width: 815px) {
+  body {
+    font-size: 16px;
+  }
+}
+
 .vertical-stretch {
 	min-height: 100vh;
 	display: flex;
