--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,14 @@
 }*/
 .git-hub.contact-link {
 	background-image: url("/git-hub-logo.png");
-	background-size: 34px;
+	background-size: 38px;
 }
 
 
 .facebook.contact-link {
 	background-image: url("/facebook.png");
-	background-size: 34px;
+	background-size: 36px;
+  margin-top: 
 }
 
 .contact-link {
