No scrolling to input box for desktop; Modifier's container style changed.

--- a/src/components/ScrabbleInputBox/ScrabbleInputBox.css
+++ b/src/components/ScrabbleInputBox/ScrabbleInputBox.css
@@ -154,9 +154,9 @@
 	background-position: 69px 0px;
 }
 
-.mobile .modifier.blank {
+.modifier.blank {
 	position: relative;
-	bottom: 15px;
+	bottom: 14px;
 }
 
 .modifier.blank span{
