--- a/src/components/ScrabbleInputBox/ScrabbleInputBox.css
+++ b/src/components/ScrabbleInputBox/ScrabbleInputBox.css
@@ -139,7 +139,7 @@
 	background-position: 69px 0px;
 }
 .modifier.blank {
-	background-image: url("/background.jpg");
+	background-image: url("/tile.jpg");
 	background-size: 69px 69px;
 
 }
