--- a/src/components/GameSettings/GameSettings.css
+++ b/src/components/GameSettings/GameSettings.css
@@ -30,15 +30,12 @@ div.logo {
 /*Design for "START BUTTON"*/
 
 .start-btn-container {
-	text-align: center;
+  margin: 0 auto;
+  width: 180px;
 }
 
-.start {
-  width: 180px;
- }
-
 @media screen and (max-width: 815px) {
-  button.start {
+  .start-btn-container {
     margin-top: 20px;
   }
 }
