Update for message in the footer; update for bingo-toggle style

--- a/src/components/ScrabbleScoreKeeper/ScrabbleScoreKeeper.css
+++ b/src/components/ScrabbleScoreKeeper/ScrabbleScoreKeeper.css
@@ -70,6 +70,10 @@ label.btn {
   margin-bottom: 0;
 }
 
+input[type=checkbox]:checked+label {
+  background: -webkit-gradient(linear, left bottom, left top, from(rgb(222, 50, 42, 0.5)), to(rgb(98, 37, 40, 0.5)));
+}
+
 /*MOBILE buttons design*/
 
 .mobile .buttons {
