--- a/src/components/ScrabbleTile/ScrabbleTile.css
+++ b/src/components/ScrabbleTile/ScrabbleTile.css
@@ -1,10 +1,9 @@
 /*DESKTOP INPUT BOX tile css*/
 
 .scrabble-letter {
-	background-image: url("/tile.jpg");
-	border: 5px black;
+	background: url("/tile.jpg");
 	background-size: 55.7px;
-	border-radius: 2px;
+	border-radius: 3px;
 	display: inline-block;
   width: 56px;
   height: 60px;
@@ -44,23 +43,31 @@
 /*Modified scrabble tiles css*/
 
 .scrabble-letter.double-letter {
-	background-image: linear-gradient(rgba(159, 202, 224, 0.1), rgba(159, 202, 224, 1)), url("/tile.jpg");
+	background: rgba(159, 202, 224);
+	border: solid 1px black;
 }
 
 .scrabble-letter.double-word {
-	background-image: linear-gradient(rgba(237,164,152, 0.1), rgba(237,164,152, 1)), url("/tile.jpg");
+	background: rgb(255,202,184);
+	border: solid 1px black;
 }
 
 .scrabble-letter.triple-letter {
-	background-image:  linear-gradient(rgba(24,163,225, 0.1), rgba(24,163,225, 1)), url("/tile.jpg");
+	background: rgba(24,163,225);
+	border: solid 1px black;
 }
 
 .scrabble-letter.triple-word {
-	background-image: linear-gradient(rgba(247,77,19, 0.1), rgba(247,77,19, 1)), url("/tile.jpg");
+	background: rgba(247,77,19);
+	border: solid 1px black;
 }
 
 .scrabble-letter.blank .score {
 	display: none;
+}
+
+.scrabble-letter.blank .letter {
+	color: rgba(0, 0, 0, 0.4);
 }
 
 /*MOBILE INPUT BOX tile css*/
